_3_dynamic_array solution.